fixed about me page overflow

--- a/style/style.css
+++ b/style/style.css
@@ -175,7 +175,7 @@ nav{
 .about-me{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 120%;
     margin:auto;
     text-align: center;
     padding-top: 30px;
@@ -330,6 +330,12 @@ clear: both;
     cursor: not-allowed;
   }
 
+  .container {
+    max-width: 100%;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 40px;
+  }
 /* -------- Projects ------- */
 #projects-section {
     margin-top: 100%;
